--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="menu_new_message"
-        android:title="New message"
-        app:showAsAction="ifRoom"/>
-    <item
-        android:id="menu_sign_out"
-        android:title="Sign out"
-        app:showAsAction="ifRoom"/>
+        android:id="@+id/new_message_menu"
+        app:showAsAction="always"
+        android:title="New Message" />
 
+    <item
+        android:id="@+id/signout_message_menu"
+        app:showAsAction="always"
+        android:title="sign out" />
 </menu>
