--- a/app/src/main/res/layout/activity_latest_messeges.xml
+++ b/app/src/main/res/layout/activity_latest_messeges.xml
@@ -7,4 +7,13 @@
     tools:context=".messages.LatestMessegesActivity">
 
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView_latest_messages"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
