--- a/app/src/main/res/layout/chat_row_you.xml
+++ b/app/src/main/res/layout/chat_row_you.xml
@@ -10,12 +10,15 @@
     <TextView
         android:id="@+id/your_text_chatrow"
         android:layout_width="wrap_content"
+        android:textAlignment="gravity"
+        android:maxWidth="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:background="@drawable/rounded_button"
         android:padding="@dimen/mtrl_bottomappbar_fab_cradle_rounded_corner_radius"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
