--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -10,6 +10,7 @@
         android:id="@+id/recyclerview_newmessage"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@drawable/background_gradient"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
