--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#26a69a</color>
-    <color name="colorPrimaryDark">#26a69a</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#0A0A0A</color>
+    <color name="colorPrimaryDark">#0A0A0A</color>
+    <color name="colorAccent">#6200EA</color>
     <color name="colorEditText">#ffffff</color>
-    <color name="background_material_light">#e0f2f1</color>
-    <color name="background_color">#e0f2f1</color>
-    <color name="img_border_color">#b2dfdb</color>
+    <color name="background_material_light">#161616</color>
+    <color name="background_color">#161616</color>
+    <color name="img_border_color">#6200EA</color>
+    <color name="color_gradient">#0E001E</color>
+    <color name="textbox_color">#464646</color>
+
 
 
     <color name="primary_text_material_dark">#000000</color>
