--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,11 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:colorBackground">@color/background_material_light</item>
+        <item name="editTextColor">#DDD</item>
+        <item name="android:textColorHint">#BEBEBE</item>
+        <item name="android:editTextColor">#DDDDDD</item>
+        <item name="android:textColor">#DDDDDD</item>
+        <item name="android:buttonTint">#DDDDDD</item>
     </style>
 
 </resources>
